--- a/infrastructure/Pulumi.prod.yaml
+++ b/infrastructure/Pulumi.prod.yaml
@@ -1,6 +1,6 @@
 # Pulumi.prod.yaml - Production environment configuration
 config:
-  aws:region: us-east-1
+  aws:region: ap-south-1
   portfolio-website-pipeline:environment: prod
   portfolio-website-pipeline:domain: your-portfolio-domain.com
   portfolio-website-pipeline:githubRepo: portfolio-website
