--- a/infrastructure/Pulumi.dev.yaml
+++ b/infrastructure/Pulumi.dev.yaml
@@ -1,17 +1,18 @@
 # Pulumi.dev.yaml - Dev environment configuration
+
 config:
   aws:region: ap-south-1
   portfolio-website-pipeline:environment: dev
-  portfolio-website-pipeline:domain: your-portfolio-domain.com
-  portfolio-website-pipeline:githubRepo: portfolio-website
-  portfolio-website-pipeline:githubOwner: your-github-username
+  portfolio-website-pipeline:domain: jacksonkasi.xyz
+  portfolio-website-pipeline:githubRepo: portfolio-website-pipeline
+  portfolio-website-pipeline:githubOwner: jacksonkasi1
   portfolio-website-pipeline:certificateArn:
-    secure: AAABAEsOMmRexample=  # Replace with your ACM certificate ARN
+    secure: AAABAEsOMmRexample= # Replace with your ACM certificate ARN
   portfolio-website-pipeline:pulumiAccessToken:
-    secure: AAABAKtG5Iexample=  # Securely set this with pulumi config set --secret
+    secure: AAABAOkNavt9mEwPZNA28bymUzOq60eeEWMUj0V3fIFe7GAfmSebFH5RvIUyZ9gIDgWhI/MD66i1cLLHwQUwQUyp3/SJPy4HI4xwvw== # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:awsAccessKeyId:
-    secure: AAABAJr6Sexample=  # Securely set this with pulumi config set --secret
+    secure: AAABAJr6Sexample= # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:awsSecretAccessKey:
-    secure: AAABADgn+example=  # Securely set this with pulumi config set --secret
+    secure: AAABADgn+example= # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:githubToken:
-    secure: AAABAMvKRexample=  # Securely set this with pulumi config set --secret
+    secure: AAABAMvKRexample= # Securely set this with pulumi config set --secret
