--- a/infrastructure/Pulumi.dev.yaml
+++ b/infrastructure/Pulumi.dev.yaml
@@ -11,8 +11,12 @@ config:
   portfolio-website-pipeline:pulumiAccessToken:
     secure: AAABAOkNavt9mEwPZNA28bymUzOq60eeEWMUj0V3fIFe7GAfmSebFH5RvIUyZ9gIDgWhI/MD66i1cLLHwQUwQUyp3/SJPy4HI4xwvw== # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:awsAccessKeyId:
-    secure: AAABAJr6Sexample= # Securely set this with pulumi config set --secret
+    secure: AAABAFCVek1o/ALICRmnwxLJSajg/Jr3pOtJqefZGa5H9MYMwDqrGyaOK7PENHfv4e/g+w== # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:awsSecretAccessKey:
-    secure: AAABADgn+example= # Securely set this with pulumi config set --secret
+    secure: AAABALaE31eYq2lTM1iUjWk4PN/xIfvmlxu1cUMhT6gejPgIJnmIfFBktid8D6SRxwQ3E05QxkQ85KUt6bWfEZKX0Vzc7Vuq # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:githubToken:
-    secure: AAABAMvKRexample= # Securely set this with pulumi config set --secret
+    secure: AAABAI1EWNjBfx4UQQG+3ey6ErWupJpOt+QzCXqJ3kR3njTy8APETbI/Xggskb1Oa+k0X+iVzUY519g5W6/ehrC/Yk9PpmL7knTWWPvttnUZ6C/b96ADAJgEKbEqFYQyp9v0urjngCJ0j0igHWnxE7l0nMtr1BLegYofgoU= # Securely set this with pulumi config set --secret
+  portfolio-website-pipeline:cloudflareAccountId:
+    secure: AAABADc/vo+7JjMRnXUAQDog/Dov4hQ2SeuDpbMe4HCD+XN3n8F/GoJtaVOakLTT96TxTmwKak89TstZlFpD/g==
+  portfolio-website-pipeline:cloudflareApiToken:
+    secure: AAABAMPWMw8oDl3zLA3rTW6jmVl0J1WmWwhcGeC0oQ3aGdKRPXNx2AF0h0bKf+LwIwRGiu2PGniW6srIwb6DW4WAKmK4AAEo
