--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -5,7 +5,8 @@
   "main": "bin/index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "pnpm run build && pulumi up"
   },
   "keywords": [
     "pulumi",
