--- a/infrastructure/Pulumi.dev.yaml
+++ b/infrastructure/Pulumi.dev.yaml
@@ -17,6 +17,6 @@ config:
   portfolio-website-pipeline:githubToken:
     secure: AAABAI1EWNjBfx4UQQG+3ey6ErWupJpOt+QzCXqJ3kR3njTy8APETbI/Xggskb1Oa+k0X+iVzUY519g5W6/ehrC/Yk9PpmL7knTWWPvttnUZ6C/b96ADAJgEKbEqFYQyp9v0urjngCJ0j0igHWnxE7l0nMtr1BLegYofgoU= # Securely set this with pulumi config set --secret
   portfolio-website-pipeline:cloudflareAccountId:
-    secure: AAABADc/vo+7JjMRnXUAQDog/Dov4hQ2SeuDpbMe4HCD+XN3n8F/GoJtaVOakLTT96TxTmwKak89TstZlFpD/g==
+    secure: AAABAGJ12yWkeRv/E/Od7rlNA7NKhxf9dETXdiPrrqFEOBCmSzHC2C+K520QwgAgwMtSCMiL8rmcbyDApqAbxg==
   portfolio-website-pipeline:cloudflareApiToken:
     secure: AAABAMPWMw8oDl3zLA3rTW6jmVl0J1WmWwhcGeC0oQ3aGdKRPXNx2AF0h0bKf+LwIwRGiu2PGniW6srIwb6DW4WAKmK4AAEo
