--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -2,11 +2,10 @@
   "name": "portfolio-website-pipeline",
   "version": "1.0.0",
   "description": "Multi-Environment Portfolio Website Pipeline using Pulumi",
-  "main": "bin/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "build": "tsc",
-    "deploy": "pnpm run build && pulumi up"
+    "deploy": "pulumi up"
   },
   "keywords": [
     "pulumi",
