--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "deploy": "pulumi up"
+    "deploy": "pulumi up",
+    "deploy:content": "aws s3 sync ../out s3://$(pulumi stack output bucketName) --delete"
   },
   "keywords": [
     "pulumi",
