--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,18 @@
-name: Pulumi Preview
+name: Deploy Portfolio Website
+
 on:
-  - pull_request
+  push:
+    branches: [ main, develop ]
+
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+  PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
 jobs:
-  preview:
-    name: Preview
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,14 +29,16 @@ jobs:
         run: |
           npm install
           cd infrastructure && npm install
-      - name: Build Next.js/React/Html App
+      - name: Build Next.js App
         run: npm run build
       - uses: pulumi/actions@v6
         with:
-          command: preview
+          command: up
           stack-name: dev
-          comment-on-pr: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           work-dir: infrastructure
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }} 
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      - name: Deploy Website Content
+        run: |
+          cd infrastructure
+          npm run deploy:content 
