--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Portfolio Website
+name: Deploy Website Content
 
 on:
   push:
@@ -7,8 +7,6 @@ on:
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
 jobs:
   deploy:
@@ -26,19 +24,10 @@ jobs:
           aws-region: ap-south-1
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Install Dependencies
-        run: |
-          npm install
-          cd infrastructure && npm install
-      - name: Build Next.js App
+        run: npm install
+      - name: Build Next.js/React/Html App
         run: npm run build
-      - uses: pulumi/actions@v6
-        with:
-          command: up
-          stack-name: dev
-          work-dir: infrastructure
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
       - name: Deploy Website Content
         run: |
-          cd infrastructure
-          npm run deploy:content 
+          BUCKET_NAME=${{ github.ref == 'refs/heads/main' && 'jacksonkasi.xyz' || 'dev.jacksonkasi.xyz' }}
+          aws s3 sync out s3://$BUCKET_NAME --delete
