Update deployment scripts to synchronize the 'dist' directory with S3 instead of 'out', ensuring consistency in the deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Deploy Website Content
         run: |
           BUCKET_NAME=${{ github.ref == 'refs/heads/main' && 'jacksonkasi.xyz' || 'dev.jacksonkasi.xyz' }}
-          aws s3 sync out s3://$BUCKET_NAME --delete
+          aws s3 sync dist s3://$BUCKET_NAME --delete
